# KoopmanTorch

./: .gitignore  README.md  generate_discrete_dataset.py  generate_pendulum_dataset.py  pyproject.toml
src/koopman/data/: base.py  pendulum.py  simple.py
src/koopman/demo/: generate_discrete_dataset.py  generate_pendulum_dataset.py  test_discrete.py  test_pendulum.py  train_discrete.py  train_pendulum.py
src/koopman/losses/: loss.py
src/koopman/models/: base_model.py  lightning_model.py  operator.py
tests/models/: test_base_model.py  test_operator.py
